// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthorList Item should render Default 1`] = `
<DocumentFragment>
  <a
    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1d7qh53-MuiTypography-root-MuiLink-root-AuthorListItem"
    href="tenetur-iste-cupiditate"
  >
    <div
      class="css-1dskvzn eyyziki0"
    >
      <img
        alt="Dicta itaque nisi mollitia voluptate."
        class="css-10xre0n-AuthorListItem e1nfkf2e0"
        height="500"
        loading="lazy"
        srcset="https://picsum.photos/seed/LvB65B/800/800 800w,
https://picsum.photos/seed/za02CkUtN/500/500 500w,
https://picsum.photos/seed/ZnX7N/300/300 300w,
https://picsum.photos/seed/hLCnt1cUnM/200/200 200w"
        title="aliquid deleniti quisquam"
        width="1000"
      />
    </div>
    <div
      class="css-0 eyyziki1"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
      >
        Bob Cummings
      </h6>
      <p
        class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
      >
        Corporate Marketing Representative
      </p>
    </div>
  </a>
</DocumentFragment>
`;

exports[`AuthorList Item should render WithClassName 1`] = `
<DocumentFragment>
  <a
    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways extra-classname css-1d7qh53-MuiTypography-root-MuiLink-root-AuthorListItem"
    href="tenetur-iste-cupiditate"
  >
    <div
      class="css-1dskvzn eyyziki0"
    >
      <img
        alt="Dicta itaque nisi mollitia voluptate."
        class="css-10xre0n-AuthorListItem e1nfkf2e0"
        height="500"
        loading="lazy"
        srcset="https://picsum.photos/seed/LvB65B/800/800 800w,
https://picsum.photos/seed/za02CkUtN/500/500 500w,
https://picsum.photos/seed/ZnX7N/300/300 300w,
https://picsum.photos/seed/hLCnt1cUnM/200/200 200w"
        title="aliquid deleniti quisquam"
        width="1000"
      />
    </div>
    <div
      class="css-0 eyyziki1"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
      >
        Bob Cummings
      </h6>
      <p
        class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
      >
        Corporate Marketing Representative
      </p>
    </div>
  </a>
</DocumentFragment>
`;

exports[`AuthorList Item should render WithEmotion 1`] = `
<DocumentFragment>
  <a
    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1d7qh53-MuiTypography-root-MuiLink-root-AuthorListItem"
    href="tenetur-iste-cupiditate"
  >
    <div
      class="css-1dskvzn eyyziki0"
    >
      <img
        alt="Dicta itaque nisi mollitia voluptate."
        class="css-10xre0n-AuthorListItem e1nfkf2e0"
        height="500"
        loading="lazy"
        srcset="https://picsum.photos/seed/LvB65B/800/800 800w,
https://picsum.photos/seed/za02CkUtN/500/500 500w,
https://picsum.photos/seed/ZnX7N/300/300 300w,
https://picsum.photos/seed/hLCnt1cUnM/200/200 200w"
        title="aliquid deleniti quisquam"
        width="1000"
      />
    </div>
    <div
      class="css-0 eyyziki1"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
      >
        Bob Cummings
      </h6>
      <p
        class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
      >
        Corporate Marketing Representative
      </p>
    </div>
  </a>
</DocumentFragment>
`;

exports[`AuthorList Item should render WithoutImage 1`] = `
<DocumentFragment>
  <a
    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1d7qh53-MuiTypography-root-MuiLink-root-AuthorListItem"
    href="tenetur-iste-cupiditate"
  >
    <div
      class="css-1dskvzn eyyziki0"
    />
    <div
      class="css-0 eyyziki1"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
      >
        Bob Cummings
      </h6>
      <p
        class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
      >
        Corporate Marketing Representative
      </p>
    </div>
  </a>
</DocumentFragment>
`;

exports[`AuthorList Item should render WithoutJobTitle 1`] = `
<DocumentFragment>
  <a
    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1d7qh53-MuiTypography-root-MuiLink-root-AuthorListItem"
    href="tenetur-iste-cupiditate"
  >
    <div
      class="css-1dskvzn eyyziki0"
    >
      <img
        alt="Dicta itaque nisi mollitia voluptate."
        class="css-10xre0n-AuthorListItem e1nfkf2e0"
        height="500"
        loading="lazy"
        srcset="https://picsum.photos/seed/LvB65B/800/800 800w,
https://picsum.photos/seed/za02CkUtN/500/500 500w,
https://picsum.photos/seed/ZnX7N/300/300 300w,
https://picsum.photos/seed/hLCnt1cUnM/200/200 200w"
        title="aliquid deleniti quisquam"
        width="1000"
      />
    </div>
    <div
      class="css-0 eyyziki1"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
      >
        Bob Cummings
      </h6>
    </div>
  </a>
</DocumentFragment>
`;
